# ros_exercises

./: CMakeLists.txt  log.npf  package.xml
launch/: my_first_launch.launch  static_tf_publisher.launch
rosbag/: fake_scan_bag.bag
src/: base_link_tf_pub.py  dynamic_tf_cam_publisher.py  fake_scan_publisher.py  open_space_publisher.py  simple_publisher.py  simple_subscriber.py  static_tf_cam_pubisher.py
